2005-02-17  Marc Singer  <elf@buici.com>

	* src/arch-arm/lib/relocate.c (__section): Implemented a simpler
	copy loop to help some platforms along.

2005-02-16  Marc Singer  <elf@buici.com>

	* src/mach-ixp42x/nslu2_config (CONFIG_ENV_REGION): Changed the
	environment region for the nslu2 so that it can be written without
	clobbering the second redboot block.

	* src/apex/cmd-copy.c (cmd_copy): Added a -v switch to copy which
	performs a double read of the source and a read after write of the
	destination to make sure the copy is correct.

	* src/mach-ixp42x/initialize.c (__section): Added DEBUG_LL
	support.

	* src/apex/cmd-compare.c (cmd_compare): Added -c switch to compare
	so we can see more than one difference in a block.

2005-02-15  Marc Singer  <elf@buici.com>

	* src/mach-lh7952x/serial.c Errors in the UART macros prevented
	serial output on the 79520.

2005-02-14  Marc Singer  <elf@buici.com>

	* Makefile 1.0.25: for good measure

2005-02-12  Marc Singer  <elf@buici.com>

	* Makefile 1.0.24 for debug_ll changes

2005-02-12  Marc Singer  <elf@cerise.buici.com>

	* Makefile: Moved the compiler declarations to the config files.

	* include/debug_ll.h: Added low-level debug support via the serial
	console.

2005-02-11  Marc Singer  <elf@buici.com>

	* src/lib/spinner.c (spinner_step): Smoothed out the spinner.

2005-02-11  Marc Singer  <elf@cerise.buici.com>

	* Makefile 1.0.23 for the nslu2 spinner.

2005-02-11  Marc Singer  <elf@buici.com>

	* src/mach-ixp42x/spinner-nslu2.c (nslu2_spinner): Implemented a
	spinner for the platform.  It uses the LEDs to show progress.

	* Makefile: 1.0.22 for NSLU2 updates.

	* src/mach-ixp42x/nslu2.h: Adding header specific to this target.

	* src/mach-ixp42x/initialize.c (initialize_bootstrap):
	Initializing the GPIO lines. Adding more LED changes.

	* src/mach-ixp42x/nslu2_config (CONFIG_SPINNER): Adding
	configuration options for more.

2005-02-10  Marc Singer  <elf@buici.com>
