@@ -62,9 +62,9 @@ CONFIG_ATAG=y
 CONFIG_ATAG_PHYS=0x20000100
 CONFIG_ARCH_NUMBER=609
 
-CONFIG_DRIVER_NAND=y
+#CONFIG_DRIVER_NAND=y
 CONFIG_DRIVER_NOR=y
-CONFIG_RELOCATE_NAND=y
+#CONFIG_RELOCATE_NAND=y
 #CONFIG_DRIVER_CPLD_SPI=y
 CONFIG_DRIVER_EMAC=y
 
